--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/lucashpmelo/SolucaoTesteBackend#readme",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "http": "0.0.0"
