--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/server.js",
-    "dev:start": "nodemon ./bin/server.js"
+    "dev:start": "nodemon ./bin/server.js",
+    "test": "mocha --exit --timeout 10000 src/test/"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,11 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
+    "mocha": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
